@@ -1,3 +1,5 @@
+	- Replaced Yugoslavia with Serbia and Montenegro
+
 1.4	December 18th, 2004
 	- Added GEOIP_MEMORY_CACHE option (Frank Mather)
 
